# phpm

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README-pt.md  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
crates/acquire/: Cargo.toml
crates/acquire/src/: dist.rs  fetch.rs  git.rs  lib.rs  shasum.rs  zipx.rs
crates/acquire/tests/: acquire.rs
crates/cli/: Cargo.toml
crates/cli/src/: install.rs  lib.rs  main.rs
crates/cli/tests/: acceptance.rs  cli.rs
crates/compat_composer/: Cargo.toml
crates/compat_composer/assets/: ASSETS_LICENSE
crates/compat_composer/src/: aggregate.rs  bin_proxies.rs  classmap.rs  installed.rs  lib.rs  php_emit.rs
crates/compat_composer/tests/: compat.rs
crates/composer_bridge/: Cargo.toml
crates/composer_bridge/src/: lib.rs  resolve.rs  scripts.rs
crates/composer_bridge/tests/: bridge.rs
crates/gc/: Cargo.toml
crates/gc/src/: collect.rs  lib.rs  registry.rs
crates/gc/tests/: gc.rs
crates/linker/: Cargo.toml
crates/linker/src/: lib.rs  materialize.rs  reconcile.rs  sentinel.rs  volume.rs
crates/linker/tests/: linker.rs
crates/lockfile/: Cargo.toml
crates/lockfile/src/: json.rs  lib.rs  lock.rs
crates/lockfile/tests/: json.rs  parse.rs
crates/lockfile/tests/fixtures/: laravel-ish.composer.json  minimal.lock.json  null-url.lock.json  with-dev.lock.json
crates/store/: Cargo.toml
crates/store/src/: atomic.rs  hash.rs  lib.rs  lock.rs  verify.rs
crates/store/tests/: store.rs
scripts/: bench.sh
