[package]
name = "acquire"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
lockfile = { path = "../lockfile" }
store = { path = "../store" }
reqwest = { workspace = true }
zip = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
zip = { workspace = true }
