[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "phpm"
path = "src/main.rs"

[dependencies]
lockfile = { path = "../lockfile" }
store = { path = "../store" }
acquire = { path = "../acquire" }
linker = { path = "../linker" }
compat_composer = { path = "../compat_composer" }
composer_bridge = { path = "../composer_bridge" }
gc = { path = "../gc" }
clap = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
