[package]
name = "compat_composer"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
lockfile = { path = "../lockfile" }
store = { path = "../store" }
serde_json = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
