[package]
name = "linker"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
lockfile = { path = "../lockfile" }
store = { path = "../store" }
walkdir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
