[package]
name = "store"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
sha2 = { workspace = true }
hex = { workspace = true }
fs4 = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
